# cpp_liib_example

./: CMakeLists.txt  README.md
exe/: main.cpp
lib/: Point.cpp  Point.h  curves.cpp  curves.h
